After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789556 - gstleaks.c: always log leaks listing
gstleaks.c: always log leaks listing
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-27 12:59 UTC by Mathieu Duponchelle
Modified: 2017-11-02 13:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstleaks.c: always log leaks listing (1.57 KB, patch)
2017-10-27 12:59 UTC, Mathieu Duponchelle
committed Details | Review

Description Mathieu Duponchelle 2017-10-27 12:59:27 UTC
When looking at logs, we can now be sure whether the reporting
of leaks has occured
Comment 1 Mathieu Duponchelle 2017-10-27 12:59:31 UTC
Created attachment 362412 [details] [review]
gstleaks.c: always log leaks listing
Comment 2 Nicolas Dufresne (ndufresne) 2017-10-28 18:52:25 UTC
I would say go ahead, code look good and seems like a good idea.
Comment 3 Mathieu Duponchelle 2017-11-02 13:57:20 UTC
Attachment 362412 [details] pushed as f911fe4 - gstleaks.c: always log leaks listing