gstleaks.c: always log leaks listing

https://bugzilla.gnome.org/show_bug.cgi?id=789556